フォーマット修正

--- a/content/posts/100and0.md
+++ b/content/posts/100and0.md
@@ -1,20 +1,23 @@
 ---
-date: 2025-05-02
-title: 作品査定
-summary: 作り直してくれ！このブラックボックスはバグが多いんだ。
-tags:
-  - 皮肉
-categories:
-  - ""
-  - ユーモア
+date: "2025-05-02"
+title: "作品査定"
+summary: "作り直してくれ！このブラックボックスはバグが多いんだ。"
+tags: ["皮肉"]
+categories: ["ユーモア"]
 showToc: true
 ShowBreadCrumbs: true
 ShowReadingTime: true
 ---
 「先生！新しい作品を作ってみました」
+
 『ほう！これは……独創性100点！』
+
 「ありがとうございます！」
+
 『面白さ0点！』
+
 「っえ？」
+
 『理解できない』
+
 「私もです……」
