jpg to webp 2_3main

--- a/content/posts/was_2025.md
+++ b/content/posts/was_2025.md
@@ -493,7 +493,7 @@ ver 2.2 - 3.0 までの9シナリオで面白かったのは
 
 ### 聖火紀行:イーストエンドの曙
 
-![](/images/was_2025/2_3_main.jpg)
+![](/images/was_2025/2_3_main.webp)
 
 1950年代、霧の都ロンドンの東ミルウォールが舞台。  
 霧の都というのは雲や雨が多いからではなく、工業大気汚染。
