--- a/content/posts/was_2025.md
+++ b/content/posts/was_2025.md
@@ -597,7 +597,7 @@ image="" >}}
 ![](/images/was_2025/iss.webp)
 
 メンバーで集まっての会話、宇宙……  
-そして、自分でロケットの発射ボタンを押してからのNASAの映像！  
+そして、自分でロケットの発射ボタンを押して……？  
 
 ![](/images/was_2025/button_press.webp)
 
