リンクミス修正

--- a/content/posts/was_2025.md
+++ b/content/posts/was_2025.md
@@ -687,7 +687,7 @@ image="" >}}
 
 {{< link-card 
 
-url="https://www.konami.com/games/silenthill/2r/jp/ja/"
+url="https://www.wakuwakugames.com/enjoythediner"
 
 title="公式サイト"
 
@@ -697,7 +697,7 @@ image="" >}}
 
 {{< link-card 
 
-url="https://store.steampowered.com/app/2124490/SILENT_HILL_2/?l=japanese"
+url="https://store.steampowered.com/app/2336980/_/?l=japanese"
 
 title="Steam"
 
@@ -800,7 +800,7 @@ image="" >}}
 
 {{< link-card 
 
-url="https://www.konami.com/games/silenthill/2r/jp/ja/"
+url="https://umamusume.jp"
 
 title="公式サイト"
 
@@ -810,7 +810,7 @@ image="" >}}
 
 {{< link-card 
 
-url="https://store.steampowered.com/app/2124490/SILENT_HILL_2/?l=japanese"
+url="https://store.steampowered.com/app/3564400/_/"
 
 title="Steam"
 
