--- a/content/posts/was_2025.md
+++ b/content/posts/was_2025.md
@@ -499,7 +499,7 @@ ver 2.2 - 3.0 までの9シナリオで面白かったのは
 霧の都というのは雲や雨が多いからではなく、工業大気汚染。
 
 ただその被害が異常であった。  
-そのため、患者への医とやその原因の究明のため、医者が病院へ派遣される。
+結核患者への医療や、その原因の究明のため、医者が病院へ派遣される。
 
 ……のだが、着いた病院が眼の前でガス爆発してしまう。  
 そこには、大気汚染レベルではない巨大な黒い影が空に蠢くのを見た。
